FIND_PACKAGE(Doxygen)
IF(DOXYGEN_FOUND)
  MESSAGE (STATUS "doxygen was found ${DOXYGEN_EXECUTABLE}")
  SET(DOXYGEN_CONF_FILE Doxyfile)
  SET(DOXYGEN_CONF_PATH ${CMAKE_CURRENT_BINARY_DIR}/${DOXYGEN_CONF_FILE})
#  SET(DOXYGEN_SOURCE_DIR ${CMAKE_SOURCE_DIR})
  CONFIGURE_FILE(${DOXYGEN_CONF_FILE}.in ${DOXYGEN_CONF_PATH})
  ADD_CUSTOM_TARGET(doc COMMAND ${DOXYGEN_EXECUTABLE} ${DOXYGEN_CONF_FILE} DEPENDS "${DOXYGEN_CONF_PATH}")
ELSE(DOXYGEN_FOUND)
  MESSAGE (WARNING "doxygen binary couldn't be found")
ENDIF(DOXYGEN_FOUND)
