find_package(Doxygen)
IF(DOXYGEN_FOUND)
  message(STATUS "doxygen was found ${DOXYGEN_EXECUTABLE}")
  set(DOXYGEN_CONF_FILE Doxyfile)
  set(DOXYGEN_CONF_PATH ${CMAKE_CURRENT_BINARY_DIR}/${DOXYGEN_CONF_FILE})
  configure_file(${DOXYGEN_CONF_FILE}.in ${DOXYGEN_CONF_PATH})
  add_custom_target(doc COMMAND ${DOXYGEN_EXECUTABLE} ${DOXYGEN_CONF_FILE} DEPENDS "${DOXYGEN_CONF_PATH}")
ELSE(DOXYGEN_FOUND)
  message(WARNING "doxygen binary couldn't be found")
ENDIF(DOXYGEN_FOUND)
